bloonix-webgui (0.42) released at 2015-04-20

    * Fixed bug: drop column country_code only if the column exist - 2.

bloonix-webgui (0.41) released at 2015-04-20

    * Fixed bug: drop column country_code only if the column exist.

bloonix-webgui (0.40) released at 2015-04-19

    * Fixed bug: if a template is added to a host then max_services=0 is not
      treated as unlimited.

bloonix-webgui (0.39) released at 2015-04-19

    * Kicked parameter show_locations and make the location feature available.

bloonix-webgui (0.38) released at 2015-04-17

    * Fixed version number handling in database maintenance.

bloonix-webgui (0.37) released at 2015-04-14

    * Bloonix Satellite implemented.

bloonix-webgui (0.36) released at 2015-04-02

    * Limits implemented.

bloonix-webgui (0.35) released at 2015-03-13

    * Fixed column creation for the service table.

bloonix-webgui (0.34) released at 2015-03-11

    * Added column data_retention to table host.

bloonix-webgui (0.33) released at 2015-03-10

    * Modified ES template and force object some keys to type 'string'.
    * Fixed building of location option for templates.
    * Show the inherited time values for timeouts and intervals for services.
    * Moved the submit button to create user charts into the overlay footer.
    * Added column volatile_comment to table service.
    * Now all actions (acknowlegded, notification, active, volatile) will be logged.

bloonix-webgui (0.32) released at 2015-02-16

    * Improved the database upgrade.
    * Migrate dashboard width from 9 to 12 and height from 6 to 12.
    * Changed the order of dashlet icons and fixed the initial dashlet
      width and height
    * Pattern fixed in init-database.

bloonix-webgui (0.31) released at 2015-02-15

    * Fixed quoting of init-database.

bloonix-webgui (0.30) released at 2015-02-14

    * Scale dashlets on the dashboard to a value related to the content width.