@@ -1,3 +1,7 @@
+bloonix-webgui (0.43) released at 2015-04-22
+
+    * Improved service parameter parsing.
+
 bloonix-webgui (0.42) released at 2015-04-20
 
     * Fixed bug: drop column country_code only if the column exist - 2.
